@@ -492,64 +492,102 @@ print.tabular <- function(x, justification = "n", ...) {
     invisible(x)
 }
 
-latex.tabular <- function(object, file="", justification="c", tabular="tabular", ...) {
+table_options <- local({
+    opts <- list(justification="c",
+    		 tabular="tabular",
+    		 toprule="\\hline",
+    		 midrule="\\hline",
+    		 bottomrule="\\hline",
+    		 titlerule=NULL
+    		 )
+    function(...) {
+        args <- list(...)
+        if (!length(args))
+            return(opts)
+        else {
+            if (is.list(args[[1L]])) args <- args[[1L]]
+            result <- opts[names(args)]
+            opts[names(args)] <<- args
+            invisible(result)
+        }
+    }
+})
+
+booktabs <- function(...) { 
+    save <- table_options(justification="l",
+                  toprule="\\toprule",
+    		  midrule="\\midrule",
+    		  bottomrule="\\bottomrule",
+    		  titlerule="\\cmidrule(lr)")
+    table_options(...)
+    save
+}
+
+latex.tabular <- function(object, file="", ...) {
     if (file == "")
     	out <- ""
     else {
     	out <- file(file, open="wt")
     	on.exit(close(out))
     }
+    opts <- table_options()
+    
     mycat <- function(...) cat(..., file=out)
     
     chars <- format(object, latex = TRUE, ...) # format without justification
     
     vjust <- attr(object, "justification")
-    ind <- !is.na(vjust) & vjust != justification
+    ind <- !is.na(vjust) & vjust != opts$justification
     chars[ind] <- sprintf("\\multicolumn{1}{%s}{%s}",
     			  vjust[ind], chars[ind])
     
     rowLabels <- attr(object, "rowLabels")
     rowLabels[is.na(rowLabels)] <- ""
     rjust <- attr(rowLabels, "justification")
-    ind <- !is.na(rjust) & (rjust != justification)
+    ind <- !is.na(rjust) & (rjust != opts$justification)
     rowLabels[ind] <- sprintf("\\multicolumn{1}{%s}{%s}",
     			      rjust[ind], rowLabels[ind])
     nleading <- ncol(rowLabels)
     rlabels <- apply(rowLabels, 1, paste, collapse = " & ")
     colnamejust <- attr(rowLabels, "colnamejust")
-    colnamejust[is.na(colnamejust)] <- justification
-    ind <- colnamejust != justification
+    colnamejust[is.na(colnamejust)] <- opts$justification
+    ind <- colnamejust != opts$justification
     colnames(rowLabels)[ind] <- sprintf("\\multicolumn{1}{%s}{%s}", 
     		colnamejust[ind], colnames(rowLabels)[ind])
     clabels <- attr(object, "colLabels")
     leadin <- paste(rep("&", nleading - 1), collapse=" ")
     cjust <- attr(clabels, "justification")
-    cjust[is.na(cjust)] <- justification
+    cjust[is.na(cjust)] <- opts$justification
 
     clines <- character(nrow(clabels))
     for (i in seq_len(nrow(clabels))) {
     	row <- c(clabels[i,], "STOP") # add sentinel
     	rowjust <- c(cjust[i,], "")
     	result <- leadin
+    	titlerules <- ""
     	label <- ""
-    	just <- justification
+    	just <- opts$justification
     	ncols <- 0
     	for (j in seq_along(row)) {
     	    if (!is.na(row[j])) {
     	    	if (ncols > 0) {
-    	    	    if (ncols > 1 || just != justification)
+    	    	    if (ncols > 1 || just != opts$justification) {
     	    	        result <- c(result, 
     	    	            sprintf("& \\multicolumn{%d}{%s}{%s}", ncols, just, label))
-    	    	    else
+    	    	        if (ncols > 1 && !is.null(opts$titlerule))
+    	    	            titlerules <- sprintf("%s%s{%d-%d}", titlerules, opts$titlerule,
+    	    	            			  firstcol, firstcol+ncols-1)
+    	    	    } else
     	    	    	result <- c(result, paste("&", label))
     	    	}
     	    	ncols <- 1
+    	    	firstcol <- j+nleading
     	    	label <- row[j]
     	    	just <- rowjust[j]
     	    } else
     	    	ncols <- ncols + 1
     	}
-    	clines[i] <- paste( paste(result, collapse=" "), "\\\\")
+    	clines[i] <- paste( paste(result, collapse=" "), "\\\\", titlerules)
     }
     clabels <- clines
     # Replace the leadin of the last line with the row label headings
@@ -561,15 +599,15 @@ latex.tabular <- function(object, file="", justification="c", tabular="tabular",
     	clabels[length(clabels)] <-
     	    paste(paste(colnames(rowLabels), collapse=" & "), 
     	    	  clabels[length(clabels)])
-    mycat("\\begin{", tabular, "}{", paste(rep(justification, nleading + ncol(chars)), 
+    mycat("\\begin{", opts$tabular, "}{", paste(rep(opts$justification, nleading + ncol(chars)), 
     				   collapse=""), "}\n", sep="")
-    mycat("\\hline\n")
+    mycat(opts$toprule, "\n", sep="")
     mycat(clabels, sep="\n")
-    mycat("\\hline\n")
+    mycat(opts$midrule, "\n", sep="")
     chars <- apply(chars, 1, paste, collapse=" & ")
     chars <- paste(" & ", chars, "\\\\")
     mycat(paste(rlabels, chars), sep="\n")
-    mycat("\\hline\n")
-    mycat("\\end{", tabular, "}\n", sep="")
+    mycat(opts$bottomrule, "\n")
+    mycat("\\end{", opts$tabular, "}\n", sep="")
     structure(list(file=file, style=character(0)), class="latex")
 }
